alignment fix

--- a/index.css
+++ b/index.css
@@ -10,11 +10,12 @@ body {
 
 .author-info {
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    top: 3px;
+    left: 30px;
     font-size: 12px;
     color: #888888;
-    text-align: right;
+    /* text-align: right; */
+    z-index: 4;
 }
 
 .stats{
@@ -25,4 +26,5 @@ body {
     color: #ffffff;
     display: flex;
     flex-direction: column;
+    z-index: 3;
 }
